<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/productDetailsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:elevation="8dp"
                    app:cardElevation="8dp"
                    android:outlineSpotShadowColor="@color/shadow"
                    android:outlineAmbientShadowColor="@color/shadow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/productDetailImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="3dp"
                        android:src="@drawable/ic_launcher_background" />
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/productDetailsPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:text="@string/description"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/productDetailsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:text="@string/title"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:text="@string/average_rating"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:weightSum="2"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:gravity="center_vertical">
                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/productDetailRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stepSize="0.5"
                        android:numStars="5"
                        android:max="5"
                        style="@style/Widget.AppCompat.RatingBar.Indicator"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:isIndicator="true"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/productDetailRatingCount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/title"
                    android:textSize="15sp"
                    android:gravity="center_vertical"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_margin="5dp"
                >
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/update"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/delete"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>